# Set-Calculator

./: CMakeLists.txt  CommandDispacher.c  CommandDispacher.h  CommandDispatcher.c  CommandDispatcher.h  CommandFactory.c  CommandFactory.h  CommandParser.c  CommandParser.h  Errors.c  Errors.h  HashMap.c  HashMap.h  MakeFile  README.md  SetMap.c  SetMap.h  TODO  UserCommand.c  UserCommand.h  UserCommandDTO.c  UserCommandDTO.h  input  myset  myset.c  output  set.c  set.h
